[package]
name = "webcam_art"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
cpal = "0.15.3"
crossterm = "0.28.1"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
opencv = "0.92.3"
opus = "0.3.0"
parking_lot = "0.12.3"
ratatui = "0.28.1"
ringbuf = "0.3"
